<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:padding="@dimen/layout_padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/time"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_big" />

            <TextView
                android:id="@+id/value_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_time"
                android:layout_centerHorizontal="true"
                android:textColor="@color/yellow"
                android:textSize="@dimen/txt_extra_big"
                android:textStyle="italic"
                tools:text=":45" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txt_nbr_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/questions"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_big" />

            <TextView
                android:id="@+id/nbr_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_nbr_questions"
                android:layout_centerHorizontal="true"
                android:textColor="@color/yellow"
                android:textSize="@dimen/txt_extra_big"
                android:textStyle="italic"
                tools:text="2/10" />

        </RelativeLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_linear_layout"
        app:layout_constraintVertical_bias="0.6">

    </FrameLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/submit"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/txt_mid"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>