<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:padding="@dimen/layout_padding">


    <android.support.v7.widget.CardView
        android:id="@+id/card_question"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_padding">

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/darkBlue"
                android:textSize="@dimen/txt_mid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="what does this logo stands for ?" />

            <ImageView
                android:id="@+id/img_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_logo"
                app:layout_constraintBottom_toTopOf="@id/radio_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_question"
                tools:src="@drawable/jetpack" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/btn_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_question"
                app:layout_constraintVertical_bias="0.9">

                <RadioButton
                    android:id="@+id/radio_prp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/radio_margin_bot"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/txt_mid"
                    tools:text="answer 1" />

                <RadioButton
                    android:id="@+id/radio_prp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/radio_margin_bot"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/txt_mid"
                    tools:text="answer 2" />

                <RadioButton
                    android:id="@+id/radio_prp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/radio_margin_bot"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/txt_mid"
                    tools:text="answer 3" />

                <RadioButton
                    android:id="@+id/radio_prp4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/txt_mid"
                    tools:text="answer 4" />
            </RadioGroup>

            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/btn_description_next"
                android:src="@drawable/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/btn_description_previous"
                android:src="@drawable/previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>